fixed weather-website exposing api key

--- a/weather.html
+++ b/weather.html
@@ -43,7 +43,7 @@
         </div>
 
     </div>
-   
+   <script src="config.js"></script>
     <script src="weather.js"></script>
  </body>
  </html>
